Traducción completa al español y estandarización de marca (GESCOM)

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
     <head>
         <meta charset="utf-8">
@@ -27,6 +27,7 @@
 
         <!-- Template Stylesheet -->
         <link href="css/style.css" rel="stylesheet">
+        <link rel="icon" type="image/svg+xml" href="img/rueda.png">
     </head>
 
     <body>
@@ -34,7 +35,7 @@
         <!-- Spinner Start -->
         <div id="spinner" class="show bg-white position-fixed translate-middle w-100 vh-100 top-50 start-50 d-flex align-items-center justify-content-center">
             <div class="spinner-border text-primary" style="width: 3rem; height: 3rem;" role="status">
-                <span class="sr-only">Loading...</span>
+                <span class="sr-only">Cargando...</span>
             </div>
         </div>
         <!-- Spinner End -->
@@ -45,7 +46,7 @@
         <div class="container-fluid header-top">
             <div class="container d-flex align-items-center">
                 <div class="d-flex align-items-center h-100">
-                    <a href="#" class="navbar-brand" style="height: 125px;">
+                    <a href="index.html" class="navbar-brand" style="height: 125px;">
                         <h1 class="text-primary mb-0"><i class="fas fa-cog"></i> GESCOM</h1>
                         <!-- <img src="img/logo.png" alt="Logo"> -->
                     </a>
@@ -56,10 +57,10 @@
                             <div class="col-lg-8 text-center text-lg-center mb-lg-0">
                                 <div class="d-flex flex-wrap">
                                     <div class="border-end border-primary pe-3">
-                                        <a href="#" class="text-muted small"><i class="fas fa-map-marker-alt text-primary me-2"></i>Lima, Perú</a>
+                                        <a href="https://www.google.com/maps/search/?api=1&query=Lima%2C%20Per%C3%BA" target="_blank" rel="noopener" class="text-muted small"><i class="fas fa-map-marker-alt text-primary me-2"></i>Lima, Perú</a>
                                     </div>
                                     <div class="ps-3">
-                                        <a href="mailto:example@gmail.com" class="text-muted small"><i class="fas fa-envelope text-primary me-2"></i>info@constructoragescom.com</a>
+                                        <a href="mailto:info@constructoragescom.com?subject=Consulta%20desde%20el%20sitio%20web&body=Hola%20GESCOM%2C%20" class="text-muted small"><i class="fas fa-envelope text-primary me-2"></i>info@constructoragescom.com</a>
                                     </div>
                                 </div>
                             </div>
@@ -72,9 +73,9 @@
                                         <a class="btn p-0 text-primary me-0" href="#"><i class="fab fa-linkedin-in"></i></a>
                                     </div>
                                     <div class="dropdown ms-3">
-                                        <a href="#" class="dropdown-toggle text-white" data-bs-toggle="dropdown"><small class="text-body"><i class="fas fa-globe-europe text-primary me-2"></i> English</small></a>
+                                        <a href="#" class="dropdown-toggle text-white" data-bs-toggle="dropdown"><small class="text-body"><i class="fas fa-globe-europe text-primary me-2"></i> Español</small></a>
                                         <div class="dropdown-menu">
-                                            <a href="#" class="dropdown-item">Ingles</a>                                            
+                                            <a href="#" class="dropdown-item">Español</a>
                                         </div>
                                     </div>
                                 </div>
@@ -100,11 +101,11 @@
                                             <span class="dropdown-toggle">Proyectos</span>
                                         </a>
                                         <div class="dropdown-menu">
-                                            <a href="team.html" class="dropdown-item">Equipo trabajo</a>
+                                            <a href="team.html" class="dropdown-item">Equipo de trabajo</a>
                                             <a href="testimonial.html" class="dropdown-item">Testimonios</a>
                                         </div>
                                     </div>
-                                    <a href="contact.html" class="nav-item nav-link">Contácto</a>
+                                    <a href="contact.html" class="nav-item nav-link">Contacto</a>
                                     <div class="nav-btn ps-3">
                                         <a href="https://htmlcodex.com/downloading/?item=3464" class="btn btn-primary py-2 px-4 ms-0 ms-lg-3"> Cotización</a>
                                     </div>
@@ -133,8 +134,8 @@
                                     <p class="mb-5 fs-5">Desarrollo de obras nuevas, ampliaciones, remodelaciones, obras de urbanización y adecuaciones estructurales. 
                                     </p>
                                     <div class="d-flex justify-content-center justify-content-md-start flex-shrink-0 mb-4">
-                                        <a class="btn btn-light py-3 px-4 px-md-5 me-2" href="#"><i class="fas fa-play-circle me-2"></i> Cotización</a>
-                                        <a class="btn btn-primary py-3 px-4 px-md-5 ms-2" href="#">Más información</a>
+                                        <a class="btn btn-light py-3 px-4 px-md-5 me-2" href="contact.html"><i class="fas fa-file-signature me-2"></i> Cotización</a>
+                                        <a class="btn btn-primary py-3 px-4 px-md-5 ms-2" href="about.html">Más información</a>
                                     </div>
                                 </div>
                             </div>
@@ -151,12 +152,12 @@
                             <div class="col-lg-7 animated fadeInLeft">
                                 <div class="text-sm-center text-md-start">
                                     <h4 class="text-white text-uppercase fw-bold mb-4">Estructuras metálicas y mantenimiento general.</h4>
-                                    <h1 class="display-2 text-white mb-4">Experience the power of professionalism</h1>
+                                    <h1 class="display-2 text-white mb-4">Experimente el poder del profesionalismo</h1>
                                     <p class="mb-5 fs-5">diseño, fabricación e instalación de estructuras metálicas para naves industriales, cubiertas  y mantenimiento.
                                     </p>
                                     <div class="d-flex justify-content-center justify-content-md-start flex-shrink-0 mb-4">
-                                        <a class="btn btn-light py-3 px-4 px-md-5 me-2" href="#"><i class="fas fa-play-circle me-2"></i> Cotización</a>
-                                        <a class="btn btn-primary py-3 px-4 px-md-5 ms-2" href="#">Más información</a>
+                                        <a class="btn btn-light py-3 px-4 px-md-5 me-2" href="contact.html"><i class="fas fa-file-signature me-2"></i> Cotización</a>
+                                        <a class="btn btn-primary py-3 px-4 px-md-5 ms-2" href="about.html">Más información</a>
                                     </div>
                                 </div>
                             </div>
@@ -178,13 +179,13 @@
                             <h1 class="display-4 mb-4">Ofreciendole la más alta calidad de funciones.</h1>
                             <div class="row g-4 mb-4">
                                 <div class="col-md-6">
-                                    <a href="#" class="d-flex">
+                                    <a href="service.html" class="d-flex">
                                         <span class="fas fa-hammer fa-3x me-3"></span>
                                         <h4 class="mb-0">Obras Industriales</h4>
                                     </a>
                                 </div>
                                 <div class="col-md-6">
-                                    <a href="#" class="d-flex">
+                                    <a href="service.html" class="d-flex">
                                         <span class="fas fa-broadcast-tower fa-3x me-3"></span>
                                         <h4 class="mb-0">Construcción Civil</h4>
                                     </a>
@@ -197,7 +198,7 @@
                                 <p class="fs-5"><span class="fa fa-check text-primary me-2"></span> Fabricación y montaje para naves industriales, techos y más.</p>
                                 <p class="fs-5"><span class="fa fa-check text-primary me-2"></span> Servicios preventivos, correctivos y mejoras integrales.</p>
                             </div>
-                            <a class="btn btn-primary py-3 px-4 px-md-5 ms-2" href="#">Contacta con nosotros</a>
+                            <a class="btn btn-primary py-3 px-4 px-md-5 ms-2" href="contact.html">Contacta con nosotros</a>
                         </div>
                     </div>
                     <div class="col-lg-5 wow fadeInRight" data-wow-delay="0.2s">
@@ -263,7 +264,7 @@
                                             <h4 class="mb-3">Construcción Civil</h4>
                                             <p class="mb-4">Edificaciones completas, ampliaciones y obras de infraestructura.
                                             </p>
-                                            <a class="btn btn-primary py-2 px-4" href="#">Read More</a>
+                                            <a class="btn btn-primary py-2 px-4" href="service.html">Leer más</a>
                                         </div>
                                     </div>
                                     <div class="service-item">
@@ -272,7 +273,7 @@
                                             <h4 class="mb-3">Estructuras Metálicas</h4>
                                             <p class="mb-4">Fabricación y montaje de techos, naves industriales y estructuras especiales.
                                             </p>
-                                            <a class="btn btn-primary py-2 px-4" href="#">Read More</a>
+                                            <a class="btn btn-primary py-2 px-4" href="service.html">Leer más</a>
                                         </div>
                                     </div>
                                     <div class="service-item">
@@ -281,7 +282,7 @@
                                             <h4 class="mb-3">Mantenimiento General</h4>
                                             <p class="mb-4">Servicio preventivo y correctivo para instalaciones, equipos y edificaciones.
                                             </p>
-                                            <a class="btn btn-primary py-2 px-4" href="#">Leer más</a>
+                                            <a class="btn btn-primary py-2 px-4" href="service.html">Leer más</a>
                                         </div>
                                     </div>
                                 </div>
@@ -294,7 +295,7 @@
                                             <h4 class="mb-3">Obras Industriales</h4>
                                             <p class="mb-4">Infraestructura especializada para empresas y plantas operativas.
                                             </p>
-                                            <a class="btn btn-primary py-2 px-4" href="#">Leer más</a>
+                                            <a class="btn btn-primary py-2 px-4" href="service.html">Leer más</a>
                                         </div>
                                     </div>
                                   
@@ -308,7 +309,7 @@
                                             <h4 class="mb-3">Fabricación Estructura Metalicas</h4>
                                             <p class="mb-4">diseño, fabricación e instalación de estructuras metálicas para naves industriales, cubiertas, mezzanines, portones, cerchas y más.
                                             </p>
-                                            <a class="btn btn-primary py-2 px-4" href="#">Leer más</a>
+                                            <a class="btn btn-primary py-2 px-4" href="service.html">Leer más</a>
                                         </div>
                                     </div>
                                     <div class="service-item">
@@ -317,7 +318,7 @@
                                             <h4 class="mb-3">Servicios Generales</h4>
                                             <p class="mb-4">mantenimiento preventivo y correctivo, reparaciones estructurales, trabajos de soldadura, pintura, herrería y servicios de mejora continua para prolongar la vida útil de sus instalaciones.
                                             </p>
-                                            <a class="btn btn-primary py-2 px-4" href="#">Leer más</a>
+                                            <a class="btn btn-primary py-2 px-4" href="service.html">Leer más</a>
                                         </div>
                                     </div>
                                     <div class="service-item">
@@ -326,7 +327,7 @@
                                             <h4 class="mb-3">Estructuras Metalicas</h4>
                                             <p class="mb-4">diseño, fabricación e instalación de estructuras metálicas para naves industriales, cubiertas, mezzanines, portones, cerchas y más.
                                             </p>
-                                            <a class="btn btn-primary py-2 px-4" href="#">Leer más</a>
+                                            <a class="btn btn-primary py-2 px-4" href="service.html">Leer más</a>
                                         </div>
                                     </div>
                                 </div>
@@ -348,7 +349,7 @@
                         <h1 class="display-4 text-white mb-4">Poderosos elogios que escuchamos de nuestros clientes</h1>
                         <p class="mb-4">Cada día nos inspira la confianza que nuestros clientes depositan en nosotros. Estas son algunas de las palabras que nos recuerdan por qué hacemos lo que hacemos.
                         </p>
-                        <a class="btn btn-light py-3 px-5" href="#">Ver todas las reseñas</a>
+                        <a class="btn btn-light py-3 px-5" href="testimonial.html">Ver todas las reseñas</a>
                     </div>
                     <div class="col-lg-6 col-xl-7 wow fadeInUp" data-wow-delay="0.4s">
                         <div class="owl-carousel testimonial-carousel">
@@ -512,8 +513,8 @@
                 <div class="row g-5 mb-5 align-items-center">
                     <div class="col-lg-7">
                         <div class="position-relative mx-auto">
-                            <input class="form-control w-100 py-3 ps-4 pe-5" type="text" placeholder="Email address to Subscribe">
-                            <button type="button" class="btn btn-primary position-absolute top-0 end-0 py-2 px-4 mt-2 me-2">Subscribe</button>
+                            <input class="form-control w-100 py-3 ps-4 pe-5" type="text" placeholder="Correo electrónico para suscribirse">
+                            <button type="button" class="btn btn-primary position-absolute top-0 end-0 py-2 px-4 mt-2 me-2">Suscribirse</button>
                         </div>
                     </div>
                     <div class="col-lg-5">
@@ -537,28 +538,28 @@
                     <div class="col-md-6 col-lg-6 col-xl-3">
                         <div class="footer-item d-flex flex-column">
                             <h4 class="text-white mb-4">Enlaces</h4>
-                            <a href="#"> Inicio</a>
-                            <a href="#"> Nosotros</a>
-                            <a href="#"> Servicios</a>
-                            <a href="#"> Contáctenos</a>
+                            <a href="index.html"> Inicio</a>
+                            <a href="about.html"> Nosotros</a>
+                            <a href="service.html"> Servicios</a>
+                            <a href="contact.html"> Contáctenos</a>
                         </div>
                     </div>
                     <div class="col-md-6 col-lg-6 col-xl-3">
                         <div class="footer-item d-flex flex-column">
-                            <h4 class="text-white mb-4">Servicios generale</h4>
-                            <a href="#"> Proyectos industriales</a>
-                            <a href="#"> Construcción civil</a>
-                            <a href="#"> Estructuras Metalicas</a>
-                            <a href="#"> Mantenimiento General</a>
-                            <a href="#"> Remodelaciones y Mejoras</a>
+                            <h4 class="text-white mb-4">Servicios generales</h4>
+                            <a href="team.html"> Proyectos industriales</a>
+                            <a href="service.html"> Construcción civil</a>
+                            <a href="service.html"> Estructuras metálicas</a>
+                            <a href="service.html"> Mantenimiento general</a>
+                            <a href="service.html"> Remodelaciones y mejoras</a>
                         </div>
                     </div>
                     <div class="col-md-6 col-lg-6 col-xl-3">
                         <div class="footer-item d-flex flex-column">
-                            <h4 class="text-white mb-4">Contact Info</h4>
-                            <a href="#"><i class="fa fa-map-marker-alt text-primary me-2"></i> Lima, Perú</a>
-                            <a href="mailto:info@example.com"><i class="fas fa-envelope text-primary me-2"></i> info@constructoragescom.com</a>
-                            <a href="mailto:info@example.com"><i class="fas fa-envelope text-primary me-2"></i> proyectos@constructoragescom.com</a>
+                            <h4 class="text-white mb-4">Información de contacto</h4>
+                            <a href="https://www.google.com/maps/search/?api=1&query=Lima%2C%20Per%C3%BA" target="_blank" rel="noopener"><i class="fa fa-map-marker-alt text-primary me-2"></i> Lima, Perú</a>
+                            <a href="mailto:info@constructoragescom.com?subject=Consulta%20desde%20el%20sitio%20web&body=Hola%20GESCOM%2C%20" ><i class="fas fa-envelope text-primary me-2"></i> info@constructoragescom.com</a>
+                            <a href="mailto:proyectos@constructoragescom.com?subject=Proyecto%20nuevo&body=Hola%20GESCOM%2C%20" ><i class="fas fa-envelope text-primary me-2"></i> proyectos@constructoragescom.com</a>
                             <a href="tel:+51 975 130 810"><i class="fas fa-phone text-primary me-2"></i> +51 975 130 810</a>
                             
                         </div>
