--- a/404.html
+++ b/404.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
     <head>
         <meta charset="utf-8">
@@ -28,6 +28,7 @@
 
         <!-- Template Stylesheet -->
         <link href="css/style.css" rel="stylesheet">
+        <link rel="icon" type="image/svg+xml" href="img/rueda.png">
     </head>
 
     <body>
@@ -35,7 +36,7 @@
         <!-- Spinner Start -->
         <div id="spinner" class="show bg-white position-fixed translate-middle w-100 vh-100 top-50 start-50 d-flex align-items-center justify-content-center">
             <div class="spinner-border text-primary" style="width: 3rem; height: 3rem;" role="status">
-                <span class="sr-only">Loading...</span>
+                <span class="sr-only">Cargando...</span>
             </div>
         </div>
         <!-- Spinner End -->
@@ -46,8 +47,8 @@
         <div class="container-fluid header-top">
             <div class="container d-flex align-items-center">
                 <div class="d-flex align-items-center h-100">
-                    <a href="#" class="navbar-brand" style="height: 125px;">
-                        <h1 class="text-primary mb-0"><i class="fas fa-bolt"></i> Electra</h1>
+                    <a href="index.html" class="navbar-brand" style="height: 125px;">
+                        <h1 class="text-primary mb-0"><i class="fas fa-cog"></i> GESCOM</h1>
                         <!-- <img src="img/logo.png" alt="Logo"> -->
                     </a>
                 </div>
@@ -57,10 +58,10 @@
                             <div class="col-lg-8 text-center text-lg-center mb-lg-0">
                                 <div class="d-flex flex-wrap">
                                     <div class="border-end border-primary pe-3">
-                                        <a href="#" class="text-muted small"><i class="fas fa-map-marker-alt text-primary me-2"></i>Find A Location</a>
+                                        <a href="https://www.google.com/maps/search/?api=1&query=Lima%2C%20Per%C3%BA" target="_blank" rel="noopener" class="text-muted small"><i class="fas fa-map-marker-alt text-primary me-2"></i>Lima, Perú</a>
                                     </div>
                                     <div class="ps-3">
-                                        <a href="mailto:example@gmail.com" class="text-muted small"><i class="fas fa-envelope text-primary me-2"></i>example@gmail.com</a>
+                                        <a href="mailto:info@constructoragescom.com?subject=Consulta%20desde%20el%20sitio%20web&body=Hola%20GESCOM%2C%20" class="text-muted small"><i class="fas fa-envelope text-primary me-2"></i>info@constructoragescom.com</a>
                                     </div>
                                 </div>
                             </div>
@@ -73,13 +74,9 @@
                                         <a class="btn p-0 text-primary me-0" href="#"><i class="fab fa-linkedin-in"></i></a>
                                     </div>
                                     <div class="dropdown ms-3">
-                                        <a href="#" class="dropdown-toggle text-white" data-bs-toggle="dropdown"><small class="text-body"><i class="fas fa-globe-europe text-primary me-2"></i> English</small></a>
+                                        <a href="#" class="dropdown-toggle text-white" data-bs-toggle="dropdown"><small class="text-body"><i class="fas fa-globe-europe text-primary me-2"></i> Español</small></a>
                                         <div class="dropdown-menu">
-                                            <a href="#" class="dropdown-item">English</a>
-                                            <a href="#" class="dropdown-item">Bangla</a>
-                                            <a href="#" class="dropdown-item">French</a>
-                                            <a href="#" class="dropdown-item">Spanish</a>
-                                            <a href="#" class="dropdown-item">Arabic</a>
+                                            <a href="#" class="dropdown-item">Español</a>
                                         </div>
                                     </div>
                                 </div>
@@ -88,8 +85,8 @@
                     </div>
                     <div class="nav-bar px-0 py-lg-0" style="height: 80px;">
                         <nav class="navbar navbar-expand-lg navbar-light d-flex justify-content-lg-end">
-                            <a href="#" class="navbar-brand-2">
-                                <h1 class="text-primary mb-0"><i class="fas fa-bolt"></i> Electra</h1>
+                            <a href="index.html" class="navbar-brand-2">
+                                <h1 class="text-primary mb-0"><i class="fas fa-cog"></i> GESCOM</h1>
                                 <!-- <img src="img/logo.png" alt="Logo"> -->
                             </a>  
                             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
@@ -97,22 +94,22 @@
                             </button>
                             <div class="collapse navbar-collapse" id="navbarCollapse">
                                 <div class="navbar-nav mx-0 mx-lg-auto bg-white">
-                                    <a href="index.html" class="nav-item nav-link">Home</a>
-                                    <a href="about.html" class="nav-item nav-link">About</a>
-                                    <a href="service.html" class="nav-item nav-link">Service</a>
+                                    <a href="index.html" class="nav-item nav-link">Inicio</a>
+                                    <a href="about.html" class="nav-item nav-link">Nosotros</a>
+                                    <a href="service.html" class="nav-item nav-link">Servicios</a>
                                     <div class="nav-item dropdown active">
                                         <a href="#" class="nav-link" data-bs-toggle="dropdown">
-                                            <span class="dropdown-toggle">Pages</span>
+                                            <span class="dropdown-toggle">Proyectos</span>
                                         </a>
                                         <div class="dropdown-menu">
-                                            <a href="team.html" class="dropdown-item">Our team</a>
-                                            <a href="testimonial.html" class="dropdown-item">Testimonial</a>
-                                            <a href="404.html" class="dropdown-item active">404 Page</a>
+                                            <a href="team.html" class="dropdown-item">Equipo de trabajo</a>
+                                            <a href="testimonial.html" class="dropdown-item">Testimonios</a>
+                                            <a href="404.html" class="dropdown-item active">Página 404</a>
                                         </div>
                                     </div>
-                                    <a href="contact.html" class="nav-item nav-link">Contact</a>
+                                    <a href="contact.html" class="nav-item nav-link">Contacto</a>
                                     <div class="nav-btn ps-3">
-                                        <a href="https://htmlcodex.com/downloading/?item=3464" class="btn btn-primary py-2 px-4 ms-0 ms-lg-3"> Buy Pro Version</a>
+                                        <a href="https://htmlcodex.com/downloading/?item=3464" class="btn btn-primary py-2 px-4 ms-0 ms-lg-3"> Cotización</a>
                                     </div>
                                 </div>
                             </div>
@@ -127,11 +124,11 @@
         <!-- Header Start -->
         <div class="container-fluid bg-breadcrumb">
             <div class="container text-center py-5" style="max-width: 900px;">
-                <h4 class="text-white display-4 mb-4 wow fadeInDown" data-wow-delay="0.1s">404 Page</h4>
+                <h4 class="text-white display-4 mb-4 wow fadeInDown" data-wow-delay="0.1s">Página 404</h4>
                 <ol class="breadcrumb d-flex justify-content-center mb-0 wow fadeInDown" data-wow-delay="0.3s">
-                    <li class="breadcrumb-item"><a href="index.html">Home</a></li>
-                    <li class="breadcrumb-item"><a href="#">Pages</a></li>
-                    <li class="breadcrumb-item active text-primary">404 Page</li>
+                    <li class="breadcrumb-item"><a href="index.html">Inicio</a></li>
+                    <li class="breadcrumb-item"><a href="#">Páginas</a></li>
+                    <li class="breadcrumb-item active text-primary">Página 404</li>
                 </ol>    
             </div>
         </div>
@@ -145,9 +142,9 @@
                     <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.3s">
                         <i class="bi bi-exclamation-triangle display-1 text-primary"></i>
                         <h1 class="display-1">404</h1>
-                        <h1 class="mb-4">Page Not Found</h1>
-                        <p class="mb-4">We’re sorry, the page you have looked for does not exist in our website! Maybe go to our home page or try to use a search?</p>
-                        <a class="btn btn-primary py-3 px-5" href="index.html">Go Back To Home</a>
+                        <h1 class="mb-4">Página no encontrada</h1>
+                        <p class="mb-4">Lo sentimos, la página que buscas no existe en nuestro sitio web. Puedes volver al inicio o intentar usar una búsqueda.</p>
+                        <a class="btn btn-primary py-3 px-5" href="index.html">Volver al inicio</a>
                     </div>
                 </div>
             </div>
@@ -160,8 +157,8 @@
                 <div class="row g-5 mb-5 align-items-center">
                     <div class="col-lg-7">
                         <div class="position-relative mx-auto">
-                            <input class="form-control w-100 py-3 ps-4 pe-5" type="text" placeholder="Email address to Subscribe">
-                            <button type="button" class="btn btn-primary position-absolute top-0 end-0 py-2 px-4 mt-2 me-2">Subscribe</button>
+                            <input class="form-control w-100 py-3 ps-4 pe-5" type="text" placeholder="Correo electrónico para suscribirse">
+                            <button type="button" class="btn btn-primary position-absolute top-0 end-0 py-2 px-4 mt-2 me-2">Suscribirse</button>
                         </div>
                     </div>
                     <div class="col-lg-5">
@@ -177,39 +174,38 @@
                     <div class="col-md-6 col-lg-6 col-xl-3">
                         <div class="footer-item d-flex flex-column">
                             <div class="footer-item">
-                                <h3 class="text-white mb-4"><i class="fas fa-bolt text-primary me-3"></i>Electra</h3>
-                                <p class="mb-3">Dolor amet sit justo amet elitr clita ipsum elitr est.Lorem ipsum dolor sit amet, consectetur adipiscing elit consectetur adipiscing elit.</p>
+                                <h3 class="text-white mb-4"><i class="fas fa-cog text-primary me-3"></i>Gescom</h3>
+                                <p class="mb-3">Atendemos todo tipo de trabajos de reparación, mantenimiento y mejora en instalaciones residenciales, comerciales e industriales.</p>
                             </div>
                         </div>
                     </div>
                     <div class="col-md-6 col-lg-6 col-xl-3">
                         <div class="footer-item d-flex flex-column">
-                            <h4 class="text-white mb-4">Quick Links</h4>
-                            <a href="#"> Home</a>
-                            <a href="#"> About us</a>
-                            <a href="#"> Service</a>
-                            <a href="#"> Testimonial</a>
-                            <a href="#"> Contact Us</a>
+                            <h4 class="text-white mb-4">Enlaces</h4>
+                            <a href="index.html"> Inicio</a>
+                            <a href="about.html"> Nosotros</a>
+                            <a href="service.html"> Servicios</a>
+                            <a href="testimonial.html"> Testimonios</a>
+                            <a href="contact.html"> Contáctenos</a>
                         </div>
                     </div>
                     <div class="col-md-6 col-lg-6 col-xl-3">
                         <div class="footer-item d-flex flex-column">
-                            <h4 class="text-white mb-4">Electricity service</h4>
-                            <a href="#"> Air Conditioning</a>
-                            <a href="#"> Electrical Panels</a>
-                            <a href="#"> Security System</a>
-                            <a href="#"> Indoor Lighting</a>
-                            <a href="#"> Electrical Services</a>
+                            <h4 class="text-white mb-4">Servicios generales</h4>
+                            <a href="team.html"> Proyectos industriales</a>
+                            <a href="service.html"> Construcción civil</a>
+                            <a href="service.html"> Estructuras metálicas</a>
+                            <a href="service.html"> Mantenimiento general</a>
+                            <a href="service.html"> Remodelaciones y mejoras</a>
                         </div>
                     </div>
                     <div class="col-md-6 col-lg-6 col-xl-3">
                         <div class="footer-item d-flex flex-column">
-                            <h4 class="text-white mb-4">Contact Info</h4>
-                            <a href="#"><i class="fa fa-map-marker-alt text-primary me-2"></i> 123 Street, New York, USA</a>
-                            <a href="mailto:info@example.com"><i class="fas fa-envelope text-primary me-2"></i> info@example.com</a>
-                            <a href="mailto:info@example.com"><i class="fas fa-envelope text-primary me-2"></i> info@example.com</a>
-                            <a href="tel:+012 345 67890"><i class="fas fa-phone text-primary me-2"></i> +012 345 67890</a>
-                            <a href="tel:+012 345 67890" class="mb-3"><i class="fas fa-print text-primary me-2"></i> +012 345 67890</a>
+                            <h4 class="text-white mb-4">Información de contacto</h4>
+                            <a href="https://www.google.com/maps/search/?api=1&query=Lima%2C%20Per%C3%BA" target="_blank" rel="noopener"><i class="fa fa-map-marker-alt text-primary me-2"></i> Lima, Perú</a>
+                            <a href="mailto:info@constructoragescom.com?subject=Consulta%20desde%20el%20sitio%20web&body=Hola%20GESCOM%2C%20" ><i class="fas fa-envelope text-primary me-2"></i> info@constructoragescom.com</a>
+                            <a href="mailto:proyectos@constructoragescom.com?subject=Proyecto%20nuevo&body=Hola%20GESCOM%2C%20" ><i class="fas fa-envelope text-primary me-2"></i> proyectos@constructoragescom.com</a>
+                            <a href="tel:+51 975 130 810"><i class="fas fa-phone text-primary me-2"></i> +51 975 130 810</a>
                         </div>
                     </div>
                 </div>
@@ -223,12 +219,12 @@
             <div class="container">
                 <div class="row g-4 align-items-center">
                     <div class="col-md-6 text-center text-md-start mb-md-0">
-                        <span class="text-body"><a href="#" class="border-bottom text-white"><i class="fas fa-copyright text-light me-2"></i>Your Site Name</a>, All right reserved.</span>
+                        <span class="text-body"><a href="#" class="border-bottom text-white"><i class="fas fa-copyright text-light me-2"></i>© 2025 Constructora GESCOM SAC | </a>Todos los derechos reservados</span>
                     </div>
                     <div class="col-md-6 text-center text-md-end text-body">
                         <!--/*** The author’s attribution link must remain intact in the template. ***/-->
                         <!--/*** If you wish to remove this credit link, please purchase the Pro Version . ***/-->
-                        Designed By <a class="border-bottom text-white" href="https://htmlcodex.com">HTML Codex</a>
+                        Diseñado por <a class="border-bottom text-white" href="https://vaftecperu.com">Vaftec</a>
                     </div>
                 </div>
             </div>
