Agregue selector de idioma en modo responsive

--- a/index.html
+++ b/index.html
@@ -107,6 +107,15 @@
                                         </div>
                                     </div>
                                     <a href="contact.html" class="nav-item nav-link"><span class="lang-es">Contacto</span><span class="lang-en">Contact</span></a>
+                                    <div class="nav-item dropdown d-lg-none">
+                                        <a href="#" class="nav-link" data-bs-toggle="dropdown">
+                                            <span class="dropdown-toggle"><small class="text-body"><i class="fas fa-globe-europe text-primary me-2"></i> <span class="lang-es">Español</span><span class="lang-en">English</span></small></span>
+                                        </a>
+                                        <div class="dropdown-menu">
+                                            <a href="#" class="dropdown-item lang-switch-es">Español</a>
+                                            <a href="#" class="dropdown-item lang-switch-en">English</a>
+                                        </div>
+                                    </div>
                                     <div class="nav-btn ps-3">
                                         <a href="contact.html#contact-form" class="btn btn-primary py-2 px-4 ms-0 ms-lg-3"><span class="lang-es"> Cotización</span><span class="lang-en"> Quote</span></a>
                                     </div>
