ocultar 404 del menú

--- a/404.html
+++ b/404.html
@@ -98,14 +98,13 @@
                                     <a href="index.html" class="nav-item nav-link"><span class="lang-es">Inicio</span><span class="lang-en">Home</span></a>
                                     <a href="about.html" class="nav-item nav-link"><span class="lang-es">Nosotros</span><span class="lang-en">About</span></a>
                                     <a href="service.html" class="nav-item nav-link"><span class="lang-es">Servicios</span><span class="lang-en">Services</span></a>
-                                    <div class="nav-item dropdown active">
+                                    <div class="nav-item dropdown">
                                         <a href="#" class="nav-link" data-bs-toggle="dropdown">
                                             <span class="dropdown-toggle"><span class="lang-es">Proyectos</span><span class="lang-en">Projects</span></span>
                                         </a>
                                         <div class="dropdown-menu">
                                             <a href="proyectos.html" class="dropdown-item"><span class="lang-es">Proyectos ejecutados</span><span class="lang-en">Executed Projects</span></a>
                                             <a href="testimonial.html" class="dropdown-item"><span class="lang-es">Testimonios</span><span class="lang-en">Testimonials</span></a>
-                                            <a href="404.html" class="dropdown-item active"><span class="lang-es">Página 404</span><span class="lang-en">404 Page</span></a>
                                         </div>
                                     </div>
                                     <a href="contact.html" class="nav-item nav-link"><span class="lang-es">Contacto</span><span class="lang-en">Contact</span></a>
